// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Default render of table 1`] = `
Array [
  <div>
    {"data":[],"editMode":false,"fields":[],"getRowName":null}
  </div>,
  <div
    className="table-container"
  >
    <div>
      {"filter":{"exportSearch":null,"fields":[],"initTokens":[]},"toolbar":{"columns":[],"csvURL":"","customToolbarButtons":[],"deletable":true,"editable":true,"editMode":false,"excelURL":"","tableId":"","insertable":true,"multipleInsertion":true,"numRowsSelected":0,"pdfURL":"","quickViews":[],"selectedRows":{},"singleInsertion":true,"viewColumns":true}}
    </div>
    <div>
      {"columns":[],"customClasses":{"container":"","table":"","tableBody":"","tableHeader":"","tableHeaderRow":"","tableHeaderCell":"","tableRow":"","tableCell":"","tableEditCell":""},"id":"","expandable":false,"rowButtons":[],"rowProperties":{"allowSelection":true,"customColumns":{},"data":[],"editMode":false,"ExpandComponent":null},"recordProperties":{"entriesViewable":0,"currentPage":1},"draggable":null,"dropType":"","pageProperties":{"enabled":true,"currentPage":1},"events":{},"sort":{"ascending":false},"numRowsSelected":0,"selectedRows":{}}
    </div>
  </div>,
]
`;

exports[`Table is loading 1`] = `
Array [
  <div>
    {"data":[],"editMode":false,"fields":[],"getRowName":null}
  </div>,
  <div
    className="table-container"
  >
    <div>
      {"filter":{"exportSearch":null,"fields":[],"initTokens":[]},"toolbar":{"columns":[],"csvURL":"","customToolbarButtons":[],"deletable":true,"editable":true,"editMode":false,"excelURL":"","tableId":"","insertable":true,"loading":true,"multipleInsertion":true,"numRowsSelected":0,"pdfURL":"","quickViews":[],"selectedRows":{},"singleInsertion":true,"viewColumns":true}}
    </div>
    <div>
      Loading 
      {}
    </div>
  </div>,
]
`;

exports[`Table with a custom container class 1`] = `
Array [
  <div>
    {"data":[],"editMode":false,"fields":[],"getRowName":null}
  </div>,
  <div
    className="table-container foo"
  >
    <div>
      {"filter":{"exportSearch":null,"fields":[],"initTokens":[]},"toolbar":{"columns":[],"csvURL":"","customToolbarButtons":[],"deletable":true,"editable":true,"editMode":false,"excelURL":"","tableId":"","insertable":true,"multipleInsertion":true,"numRowsSelected":0,"pdfURL":"","quickViews":[],"selectedRows":{},"singleInsertion":true,"viewColumns":true}}
    </div>
    <div>
      {"columns":[],"customClasses":{"container":"foo"},"id":"","expandable":false,"rowButtons":[],"rowProperties":{"allowSelection":true,"customColumns":{},"data":[],"editMode":false,"ExpandComponent":null},"recordProperties":{"entriesViewable":0,"currentPage":1},"draggable":null,"dropType":"","pageProperties":{"enabled":true,"currentPage":1},"events":{},"sort":{"ascending":false},"numRowsSelected":0,"selectedRows":{}}
    </div>
  </div>,
]
`;
